coverletter + highlights + graphical abstract

--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -2595,6 +2595,12 @@
 	year={2024},
 	publisher={Elsevier}
 }
+@article{clack2025,
+	title={Shock tube study of methane pyrolysis for industrial production of hydrogen and carbon black},
+	author={Gibson, Clark and Mishra, Naman and Rault, and Taylor M. and Streicher, Jesse W. and Wei, Chuyu and Zaczek, Luke T. and Hanson, Ronald K.},
+	journal={in prepapration},
+	year={2025},
+}
 @misc{HansonGroupShockTube,
   title = {Hanson Research Group Shock Tubes},
   howpublished = {\url{https://hanson.stanford.edu/our-approaches/shock-tubes}},
