--- a/Includes/introduction.tex
+++ b/Includes/introduction.tex
@@ -36,13 +36,13 @@ Soot is a broadband light absorber~\cite{d2009combustion} and is emitted on a la
 Controlling CB yield, structure, morphology, and composition is essential for producing specific grades of CB tailored to target applications in both conventional (e.g., furnace process~\citep{dames2023plasma}) and emerging production methods~\citep{li2017experimental, fulcheri2023energy, patlolla2023review}. However, the influence of process parameters such as feedstock composition, pressure, and temperature-time history on CB properties remains incompletely understood due to the complexity of gas-phase chemistry and the intricate nature of CB formation (as discussed in the following sections). This underscores the need for robust computational models to predict yield, particle structure, and composition under varying process conditions, and to support the mitigation of soot emissions from combustion systems.
 
 
-\textit{"Soot"} and \textit{"Carbon Black"} are distinct materials in terms of chemical properties and synthesis processes~\cite{watson2001carbon}. While, soot usually refers to unwanted particulate matter formed during incomplete combustion with variable organic content and a large variation in carbon to hydrogen ratio (C/H)~\citep{watson2001carbon}, CB is commercially produced under highly controlled partial combustion or thermal decomposition of hydrocarbons. However, soot particles generated under controlled laboratory conditions can have similar structure and composition to CB. Mature soot formed in methane and ethylene premixed flames can reach elemental C/H$\approx$20~\cite{russo2015dehydrogenation}, which is close to C/H of CB. Additionally, the comparison of Transmission Electron Microscopy (TEM) images of industrially produced CB~\citep{singh2018nanostructure} with soot sampled from diesel fuel~\citep{vander2007hrtem, lapuerta2017morphological} indicates similarities in their morphology and structure. Hereafter, soot will be used to collectively refer to carbonaceous nanoparticles produced during combustion/pyrolysis processes.
+\textit{"Soot"} and \textit{"Carbon Black"} are distinct materials in terms of chemical properties and synthesis processes~\cite{watson2001carbon}. While, soot usually refers to unwanted particulate matter formed during incomplete combustion with variable organic content and a large variation in carbon to hydrogen ratio (C/H)~\citep{watson2001carbon}, CB is commercially produced under highly controlled partial combustion or thermal decomposition of hydrocarbons. However, soot particles generated under controlled laboratory conditions can have similar structure and composition to CB. Mature soot formed in methane and ethylene premixed flames can reach elemental $\mathrm{C/H}\approx20$~\cite{russo2015dehydrogenation}, which is close to C/H of CB. Additionally, the comparison of Transmission Electron Microscopy (TEM) images of industrially produced CB~\citep{singh2018nanostructure} with soot sampled from diesel fuel~\citep{vander2007hrtem, lapuerta2017morphological} indicates similarities in their morphology and structure. Hereafter, soot will be used to collectively refer to carbonaceous nanoparticles produced during combustion/pyrolysis processes.
 
 
 Soot inception is believed to begin with the formation of Polycyclic Aromatic Hydrocarbons (PAHs) in the gas phase and followed by their transition into incipient particles. Soot inception remains poorly understood at the level of pathways and elementary reactions~\citep{Wang2011}. This lack of understanding stems primarily from uncertainties in PAH chemistry and the kinetics of PAH growth into soot particles, a process that is highly reversible and thus sensitive to local conditions such as temperature, pressure, and the concentrations of intermediate species~\citep{Wang2011}.
 
 
-The classic description of soot inception relies on PAH dimerization where collision of two PAH molecules (monomers in this context) forms a dimer held together by van der Waals forces (vdW)~\citep{frenklach1991detailed}. The dimerization is an irreversible process with an efficiency that accounts for the reversibility or dissociation of dimers. The theory postulates that PAH growth continues by sequential addition of monomers forming stacks of dimers, trimers, tetramers, and so on to reach a certain mass threshold that marks the emergence of incipient soot~\citep{frenklach1991detailed}, but for practical purposes, a dimer is usually considered as incipient soot. Here, we call this model \textit{Irreversible Dimerization}. 
+The classic description of soot inception relies on PAH dimerization where collision of two PAH molecules (monomers in this context) forms a dimer held together by van der Waals forces (vdW)~\citep{frenklach1991detailed}. The dimerization is an irreversible process with an efficiency that accounts for the reversibility or dissociation of dimers. The theory postulates that PAH growth continues by sequential addition of monomers forming stacks of dimers, trimers, tetramers, and so on to reach a certain mass threshold that marks the emergence of incipient soot~\citep{frenklach1991detailed}, but for practical purposes, a dimer is usually considered incipient soot. Here, we call this model \textit{Irreversible Dimerization}. 
 Irreversible Dimerization has been used to predict soot formation in burner-stabilized premixed~\citep{salenbauch2015modeling, desgroux2017comparative}, counterflow diffusion flames~\citep{wang2015soot, xu2021experimental}, and coflow diffusion flames~\citep{kholghy2016core, veshkini2016understanding}. A collision efficiency factor ranging between $10^{-6}$ to 1 is also employed to adjust the inception flux and PAH adsorption rates to achieve desired soot mass and size distribution. PAHs of moderate sizes, such as pyrene to coronene, are typically considered as the starting point of inception due to their thermodynamic stability, which justifies the irreversibility at high temperatures~\citep{frenklach1991detailed}. However, the theoretical calculations~\citep{miller1985calculations} and experiments~\citep{sabbah2010exploring} indicated that PAH dimerization is highly reversible in flame conditions. The inception flux of irreversible dimerization is mainly controlled by PAH concentration due to its weak temperature dependence, so it produces new particles at low temperatures (even below 500 K)~\citep{naseri2022simulating} despite experimental evidence for termination of inception below 1200 K~\citep{sanchez2012polycyclic, cho2016synthesis}. 
 
 
