--- a/Includes/nomenclature.tex
+++ b/Includes/nomenclature.tex
@@ -57,9 +57,9 @@
 \nomenclature[e]{$SF$}{Sectional spacing factor \nomunit{\si{-}}}
 %\nomenclature[g]{$\beta$}{Collision frequency\nomunit{\metre}}
 \nomenclature[e]{$f$}{Friction factor \nomunit{\si{-}}}
-\nomenclature[e]{$R_H$}{Duct hydraulic radius \nomunit{\si{-}}}
-\nomenclature[e]{$D_H$}{Duct hydraulic diameter \nomunit{\si{-}}}
-\nomenclature[e]{$Kn$}{Knudsen number \nomunit{\si{\meter}}}
+\nomenclature[e]{$R_H$}{Duct hydraulic radius \nomunit{\si{\meter}}}
+\nomenclature[e]{$D_H$}{Duct hydraulic diameter \nomunit{\si{\meter}}}
+\nomenclature[e]{$Kn$}{Knudsen number \nomunit{\si{-}}}
 \nomenclature[e]{$f_v$}{Soot volume fraction based on gas volume\nomunit{\si{\metre\cubed\per\metre\cubed}}}
 \nomenclature[e]{$Y$}{Mass fraction of gaseous species\nomunit{\si{-}}}
 \nomenclature[e]{$Re$}{Reynolds number\nomunit{\si{-}}}
@@ -86,7 +86,7 @@
 
 \nomenclature[u]{agg}{Agglomerate}
 \nomenclature[u]{pri}{Primary particle}
-\nomenclature[u]{fm}{Free molecular}
+\nomenclature[u]{fm}{Free-molecular}
 \nomenclature[u]{cont}{Continuum}
 \nomenclature[u]{inc}{Inception}
 \nomenclature[u]{grow}{Surface growth}
