--- a/Includes/results/psr.tex
+++ b/Includes/results/psr.tex
@@ -1,7 +1,9 @@
 \subsection{Ethylene combustion in a perfectly stirred reactor}
 The PSR model of Omnisoot\footnote{\href{https://github.com/mohammadadib-cu/omnisoot-cv/tree/main/examples/psr_pfr}{https://github.com/mohammadadib-cu/omnisoot-cv/tree/main/examples/psr\_pfr}} was used to simulate ethylene combustion at different equivalence ratios, $\phi = 1.9$, 2.0, and 2.1 in a perfectly stirred reactor connected to a flow reactor~\citep{manzello2007soot}. PSD measurements were conducted at the end of the flow reactor using a Nano-Differential Mobility Analyzer (Nano-DMA). The volume and nominal residence time of the PSR are 250~ml and 11~ms, respectively~\citep{manzello2007soot}. The flow reactor is 70~cm long with an inner diameter of 5.1~cm. The reactants enter the adiabatic PSR at 300~K with an inlet mass flow rate of $\dot{m}_{in} = \rho V / \tau$, where $\rho$ was calculated at the reactor temperature of 1723~K~\citep{lenhert2009effects}. The PSR simulation was continued until a steady-state condition was reached for all the solution variables. The final gas composition, temperature, and soot properties from the PSR were used as inlet conditions for the PFR simulations, yielding an average axial velocity of 14.5~m/s in the PFR, which is consistent with the values reported by~\citet{manzello2007soot}.
 
-The KAUST mechanism was used to describe the gas-phase chemistry. The inception and PAH adsorption adjustment factors were varied for each PAH growth model to match the predicted PSD with the measurements as closely as possible for all three equivalence ratios. As shown in Figure~\ref{fig:psrpfr_psd}, all inception models capture the peak number concentration and the unimodal shape of the PSD, indicating that particle inception has ceased and coagulation is the dominant mechanism for agglomerate size growth. As reported in Table~\ref{tab:psrpfr_morpcomp}, the geometric mean mobility diameter, $d_{m,g}$, and the geometric mobility standard deviation, $\sigma_{m,g}$, obtained using all inception models are in good agreement with the values calculated from the measured PSD~\citep{manzello2007soot}. As shown in Figures~\ref{fig:psrpfr_psd}a and~\ref{fig:psrpfr_psd}b, the spread of the predicted PSD is narrower than that of the measurements for $\phi = 1.9$ and 2.0, corresponding to an underprediction of $\sigma_{m,g}$ for these equivalence ratios.
+The KAUST mechanism was used to describe the gas-phase chemistry. The inception and PAH adsorption adjustment factors were varied for each PAH growth model to match the predicted PSD with the measurements as closely as possible for all three equivalence ratios. A similar match could not be reached using the Caltech mechanism because the number concentration of particles was underestimated by at least four orders of magnitude even with $\eta_{inc}=\eta_{ads}=1$. 
+
+As shown in Figure~\ref{fig:psrpfr_psd}, all inception models capture the peak number concentration and the unimodal shape of the PSD, indicating that particle inception has ceased and coagulation is the dominant mechanism for agglomerate size growth. As reported in Table~\ref{tab:psrpfr_morpcomp}, the geometric mean mobility diameter, $d_{m,g}$, and the geometric mobility standard deviation, $\sigma_{m,g}$, obtained using all inception models are in good agreement with the values calculated from the measured PSD~\citep{manzello2007soot}. As shown in Figures~\ref{fig:psrpfr_psd}a and~\ref{fig:psrpfr_psd}b, the spread of the predicted PSD is narrower than that of the measurements for $\phi = 1.9$ and 2.0, corresponding to an underprediction of $\sigma_{m,g}$ for these equivalence ratios.
 
 
 
