--- a/Includes/results/results.tex
+++ b/Includes/results/results.tex
@@ -3,6 +3,7 @@
 \input{Includes/results/shocktube}
 \input{Includes/results/pfr}
 \input{Includes/results/psr}
+\input{Includes/results/adjustmentrange}
 %\input{Includes/results/effectparticle}
 %\input{Includes/results/effectinception}
 %\input{Includes/results/effectadsorption}
