--- a/Includes/settings.tex
+++ b/Includes/settings.tex
@@ -19,7 +19,7 @@
 %\usepackage[dvipsnames]{xcolor}
 \usepackage{setspace}
 \usepackage{import}
-
+\usepackage{multirow}
 \usepackage[pagewise]{lineno}
 \linenumbers
 
