--- a/Includes/submissionguide.tex
+++ b/Includes/submissionguide.tex
@@ -1,12 +1,8 @@
-\textbf{\large{List of potential journals}}
-\vspace{0.3cm}
-\begin{itemize}
-	\item Chemical Engineering Journal
-	\item Combustion and Flame
-	\item Powder Technology
-\end{itemize}
+\begin{titlepage}
 
-\vspace{1cm}
+\pagestyle{empty} % Suppress page number
+\nolinenumbers
+
 \textbf{\large{List of potential reviewers}}
 \vspace{0.3cm}
 
@@ -14,9 +10,12 @@
 	\item Dr. José Moran, Assistant professor at University of Ottawa, jose.moran@uottawa.ca
 	\item Dr. Seth Dworkin, Professor at Toronto Metropolitan University, seth.dworkin@torontomu.ca
 	\item Dr. Chiara Saggese, Researcher at Lawrence Livermore National Laboratory, saggese1@llnl.gov
-	\item Dr. Hope Michelsen, Professor at University of Colorado Boulder, hope.michelsen@colorado.edu
 	\item Dr. Benedetta Franzelli, CNRS researcher at EM2C laboratory in Université Paris-Saclay, benedetta.franzelli@centralesupelec.fr
 	\item Dr. Angela Violi, Professor at University of Michigan, avioli@umich.edu
 	\item Dr. Francesco Carbone, Professor at University of Connecticut, carbone@uconn.edu
 	\item Dr. Tiziano Faravelli, Professor at Politecnico di Milano, tiziano.faravelli@polimi.it
+	\item Dr. Ronald Hanson, Professor at Stanford University, rkhanson@stanford.edu
 \end{itemize}
+
+
+\end{titlepage}
