--- a/main.tex
+++ b/main.tex
@@ -4,11 +4,13 @@
 \doublespacing
 \begin{document}
 
+\include{Includes/coverletter}
+\include{Includes/submissionguide}
+\include{Includes/highlights}
 % ------------------------------------------------------------ %
 \include{Includes/title}
 \maketitle
 % ------------------------------------------------------------ %
-\include{Includes/submissionguide}
 \include{Includes/nomenclature}
 \input{Includes/introduction}
 \input{Includes/theory}
