--- a/Includes/results/shocktube.tex
+++ b/Includes/results/shocktube.tex
@@ -1,4 +1,4 @@
-\subsection{Methane pyrolysis in shock-tube}
+\subsection{Methane pyrolysis in shock tube}
 
 The pyrolysis of a 5\% $\mathrm{CH_4}$-Ar mixture was studied using the CPR model over a post-shock temperature range of $\mathrm{T_5} = 1800$-$3000$ K and a pressure range of $\mathrm{P_5} = 4.7$-$7.1$ bar. Since $\mathrm{P_5}$ was not specified for individual experiments (each defined by a given $\mathrm{T_5}$), a linear dependence of $\mathrm{P_5}$ on $\mathrm{T_5}$ was assumed within the stated range~\citep{agafonov2016unified}. The gas-phase chemistry was modeled using the Caltech mechanism. Inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively, to match the predicted Carbon Yield (CY) at $t = 1.5$ ms with light extinction measurements at $\lambda = 632$ nm across the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ ranges~\citep{agafonov2016unified}. The experimental CY was extracted from the reported product of CY$\times$E(m). However, this approach introduces uncertainty due to variability in E(m). It is common to assume the E(m) of mature soot, which may not be valid in shock tube experiments with short residence times ($\approx 2$ ms) that involve initial stages of soot formation, as E(m) increases with particle size, composition, and maturity. For instance, during acetylene pyrolysis, E(m) can vary from 0.05 to 0.25 as $d_p$ reaches 20 nm within 1.6 ms. Despite such observations, our quantitative understanding of the evolution of E(m) in soot remains limited. We considered the reported variability of E(m) in the literature, ranging from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot}.
 
@@ -36,7 +36,11 @@ Figure~\ref{fig:SPC_cmf_cpr}a shows the CMF of soot precursors (individual PAHs 
 
 
 
-Next set of simulations were conducted by using equal adjustment factors ($\eta_{inc}=\eta_{ads}$) to minimize the prediction error of CY. Figure~\ref{fig:shockagof_yield_dp_cpr}a compares CY from various inception models with experimental data~\citep{agafonov2016unified}. A skew exponential curve (black dotted line) was fitted to the data to highlight the CY trend and its peak near 12\%. Soot CY follows a bell-shaped profile similar to that of soot precursors, as inception flux and mass growth directly depend on precursor concentrations. Reactive Dimerization model predicts higher CY at lower temperatures, while E-Bridge Modified model shifts the peak to higher temperatures due to a different temperature dependence, which is primarily governed by PAH dehydrogenation via an Arrhenius rate law, in contrast to physical PAH collisions in other models. 
+Next set of simulations were conducted by using equal adjustment factors ($\eta_{inc}=\eta_{ads}$) to minimize the prediction error of CY. Figure~\ref{fig:shockagof_yield_dp_cpr}a compares CY from various inception models with experimental data~\citep{agafonov2016unified}. A skew exponential curve (black dotted line) was fitted to the data to highlight the CY trend and its peak near 12\%. Soot CY follows a bell-shaped profile similar to that of soot precursors, as inception flux and mass growth directly depend on precursor concentrations. Reactive Dimerization model predicts higher CY at lower temperatures, while E-Bridge Modified model shifts the peak to higher temperatures due to a different temperature dependence, which is primarily governed by PAH dehydrogenation via an Arrhenius rate law, in contrast to physical PAH collisions in other models. We also ran simulations using the KAUST mechanism for the equal-adjustment-factors case and compared the model predictions with the CY measurements, as shown in Figure~\ref{fig:shockagof_yield_dp_cpr_kaust}. The bell-shaped profile of CY was captured; however, the $\mathrm{T_5}$ corresponding to the peak CY was overpredicted by all inception models by more than 100~K, in contrast to the Caltech mechanism, which shows closer agreement with the measurements.
+
+
+We also ran simulations using the KAUST mechanism for the equal-adjustment-factors case and compared the model predictions with the CY measurements, as shown in Figure~\ref{fig:shockagof_yield_dp_cpr_kaust}. The bell-shaped profile of CY was captured; however, the $\mathrm{T_5}$ corresponding to the peak CY is nearly 100~K higher than that of the measurements, whereas the Caltech mechanism provided a better prediction of the peak location.
+
 
 
 As shown in Figure~\ref{fig:shockagof_yield_dp_cpr}b, the predicted $d_p$ increases with $\mathrm{T_5}$, reaching a maximum of 12.5 nm at 2700 K, where yield is very low ($\approx 10^{-7}$), and then drops to the model's minimum allowed value of 2 nm. The differences between inception models in predicting $d_p$ is overall negligible except for Reactive Dimerization model, which predicts a larger $d_p$ in $\mathrm{T_5}<2500$ K. The $d_p$ trends can be better understood by examining Equation~\eqref{eqn:d_p} indicating that $d_p$ is proportional to the third-root of $C_{tot}/N_{pri}$. $C_{tot}$ describes total carbon mass converted to soot through inception and surface growth while $N_{pri}$ is only determined by inception flux. As a result, $d_p$ is controlled by the ratio of total surface growth rate (via HACA and PAH adsorption) to inception flux. The ratio of carbon mass gained up to 1.5 ms by each pathway to the total soot carbon mass was calculated and shown in Figure~\ref{fig:shockagof_carbon_map_cpr}. PAH adsorption is the dominant soot mass growth pathway for Reactive Dimerization model in $\mathrm{T_5}<2000$ K (Figure~\ref{fig:shockagof_carbon_map_cpr}a), which results in larger $C_{tot}/N_{pri}$ and $d_p$ values, but inception is dominant for the other inception models. The contribution of inception decreases with temperature for all inception models while the contribution of HACA becomes dominant up to 2700 K leading to higher $d_p$ (Figure~\ref{fig:shockagof_yield_dp_cpr}b). This is due to the decrease of precursor concentration and the increase of $\mathrm{C_2H_2}$ CMF. Beyond 2700 K, the contribution of inception rapidly increases with temperature leading to the decrease of $d_p$ (Figure~\ref{fig:shockagof_yield_dp_cpr}b).
